--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate-types": "npx supabase gen types typescript --project-id ocwjzaogqyxlfgqvcxjv --schema public > types_db.ts"
   },
   "dependencies": {
     "@emotion/react": "^11.13.0",
