--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@emotion/styled": "^11.13.0",
     "@material-tailwind/react": "^2.1.9",
     "@mui/icons-material": "^5.16.6",
+    "@supabase/ssr": "^0.4.0",
+    "@tanstack/react-query": "^5.51.23",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
