--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.16.6",
     "@supabase/ssr": "^0.4.0",
     "@tanstack/react-query": "^5.51.23",
+    "eslint": "^8.57.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
@@ -26,6 +27,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.20",
+    "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
